# expectionalC

./: CMakeLists.txt  README.md  main.cpp
errorSample/: temrs18-19.h  terms1.h  terms2,3.h  terms20.h  terms21.h  terms22-23.h  terms24.h  terms25.h  terms26-28.h  terms31-35.h  terms4,5.h  terms6.h  terms8-19.h
