cmake_minimum_required(VERSION 3.24)
project(Exceptional_c__)

set(CMAKE_CXX_STANDARD 17)

add_executable(Exceptional_c__ main.cpp errorSample/terms1.h errorSample/terms2,3.h errorSample/terms4,5.h errorSample/terms6.h errorSample/terms8-19.h errorSample/temrs18-19.h errorSample/terms20.h errorSample/terms21.h errorSample/terms22-23.h errorSample/terms24.h errorSample/terms25.h errorSample/terms26-28.h errorSample/terms31-35.h)
